--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
     --z-tooltip : 10;
     --z-fixed   : 100;
     --z-modal   : 1000;
+
+    --space-s: 10px;
+    --space-m: 20px;
+    --space-l: 30px;
 }
 
 *, *::before, *::after{
@@ -33,149 +37,189 @@
 
 body{
     font-family: var(--ff-text);
-    margin-top: 10vh;
+    margin-top: 15vh;
 }
 
-nav{
+/* ------------------- nav bar ---------------- */
+
+.nav{
     position: fixed;
     z-index: var(--z-fixed);
     top: 0vh;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: 10px;
+    grid-gap: var(--space-s);
     grid-auto-rows: minmax(280px, auto);
-    height: 10vh;
-    background-color: var(--dark-color);
+    height: 15vh;
+    background-color: var(--main-color);
 }
-    .logo-container,
-    .logo-container a{
-        height: inherit;
-        width: 280px;
-    }
-    .logo-container a{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .logo-container img{
-        height: 70%;
-    }
+.logo-container,
+.logo-container a{
+    height: inherit;
+    width: 280px;
+}
+.logo-container a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo-container img{
+    height: 55px;
+}
 
-    .menu-container{
-        height: inherit;
-        grid-column: 2 / 5;
-    }
-    .list,
-    .item-list,
-    .item-list a{
-        display: flex;
-        height: 100%;
-    }
-    .list{
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    .item-list a{
-        align-items: center;
-        color: var(--light-color-alt);
-        font-weight: 700;
-        position: relative;
-    }
-    .item-list:hover{
-        transition: .3s;
-        background-color: var(--transparent-color);
-        font-size: var(--fs-subtitle);
-        padding: 0 5px; 
-    }
-    .item-list:hover .sublist{
-        display: inline;
-        position: absolute;
-        top: 10vh;
-        font-size: var(--fs-text);
-    }
-    .sublist{
-        display: none;
-    }
-    .user-container,
-    .logo{
-        height: inherit;
-    }
-    .logo{
-        display: flex;
-        align-items: center;
-    }
-    .logo img{
-        height: 70%;
-    }
+.menu-container{
+    height: inherit;
+    grid-column: 2 / 5;
+}
+.list,
+.item-list,
+.item-list a{
+    display: flex;
+    height: 100%;
+}
+.list{
+    justify-content: space-evenly;
+    align-items: center;
+}
+.item-list a{
+    align-items: center;
+    color: var(--light-color-alt);
+    font-weight: 700;
+    position: relative;
+}
+.item-list:hover{
+    transition: .2s;
+    background-color: var(--transparent-color);
+    font-size: var(--fs-subtitle);
+    padding: 0 5px; 
+}
+.user-container,
+.logo{
+    height: inherit;
+}
+.logo{
+    display: flex;
+    align-items: center;
+}
+.logo img{
+    height: 55px;
+}
 
-header{
+/* ------------------- header ---------------- */
+
+.header{
     background-color: var(--second-color);
 }
-    .important-container,
-    .important-container img{
-        height: 70vh;
-        border-right: 10px solid var(--dark-color);
-    }
-    .important-container{
-        display: flex;
-        flex-wrap: nowrap;
-        overflow: hidden;
-        animation: moving 6s infinite alternate ease-in;
-    }
-    @keyframes moving{
-        0%, 49%{ margin-left: 0; }
-                
-        50%, 100%{ margin-left: -70%; }
-    }
+.important-container,
+.important-container img{
+    height: 70vh;
+    border-right: 10px solid var(--dark-color);
+}
+.important-container{
+    display: flex;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    animation: moving 6s infinite alternate ease-in;
+}
+@keyframes moving{
+    0%, 49%{ margin-left: 0; }
+    50%, 100%{ margin-left: -70%; }
+}
 
-main{
+    /* ------------------- main ---------------- */
+
+.main{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 20px 80px 0;
+    padding: 50px 80px;
     background-color: var(--bg-color);
 }
-    .category-container{
-        height: 50vh;
-        width: 25vw;
-        margin-bottom: 20px;
-    }
-    .category-item{
-        height: inherit;
-        width: inherit;
-        overflow: hidden;
-    }
-    .category-item:hover{
-        background-color: var(--transparent-color);
-        box-shadow: 0 0 10px var(--dark-color);
-    }
-    .category-item img{
-        /* margin: auto; */
-        height: inherit;
-        width: inherit;
-        object-fit: cover;
-    }
+.category-container{
+    height: 50vh;
+    width: 25vw;
+    margin-bottom: var(--space-m);
+}
+.category-item{
+    height: inherit;
+    width: inherit;
+    overflow: hidden;
+}
+.category-item:hover{
+    background-color: var(--transparent-color);
+    box-shadow: 0 0 10px var(--dark-color);
+}
+.category-item img{
+    height: inherit;
+    width: inherit;
+    object-fit: cover;
+}
 
-footer{
+/* ------------------- footer ---------------- */
+
+.footer{
+    height: 20vh;
+    background-color: var(--second-color-alt);
+    position: relative;
+}
+.top-footer{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 10vh;
-    background-color: var(--second-color-alt);
+    height: 15vh;
 }
-    .contact,
-    .contact a,
-    .social,
-    .social a,
-    .designed,
-    .designed a{
-        font-family: var(--ff-title);
-        font-size: var(--fs-subtitle);
-        color: var(--light-color-alt);
-    }
-    .contact img,
-    .social img{
-        height: 30px;
-        vertical-align: -10px;
-        margin-right: 10px;
-    }
+.bottom-footer{
+    background-color: var(--bg-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 5vh;
+    position: absolute;
+    bottom: 0;
+}
+.designed{
+    font-family: var(--ff-text);
+    font-size: var(--fs-text);
+    color: var(--dark-color);
+}
+.contact,
+.contact a,
+.social,
+.social a,
+.faq,
+.faq a{
+    font-family: var(--ff-title);
+    font-size: var(--fs-subtitle);
+    color: var(--light-color-alt);
+}
+.contact img,
+.social img{
+    height: 30px;
+    vertical-align: -10px;
+    margin-right: 10px;
+}
+
+/* ------------------- FAQs ---------------- */
+.main-faqs{
+    font-family: var(--ff-text);
+}
+.faqs-container{
+    padding: 50px 80px;
+}
+.faqs-container .faq{
+    margin-bottom: var(--space-l);
+}
+.question{
+    font-family: var(--ff-text);
+    font-size: var(--fs-subtitle);
+    line-height: var(--fs-title);
+    color: var(--dark-color);
+}
+.answer{
+    font-family: var(--ff-text);
+    font-size: var(--fs-text);
+    line-height: var(--fs-subtitle);
+    letter-spacing: .5px;
+    color: var(--transparent-color);
+}
