--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
     --light-color-alt:  #ffed00;
     --bg-color:         #fff;
 
-    --fs-title:          32px;
-    --fs-subtitle:       24px;
-    --fs-text:           16px;
+    --fs-title:          2rem;
+    --fs-subtitle:       1.5rem;
+    --fs-text:           1rem;
 
     --ff-title:          'Euphoria Script', cursive;
     --ff-text:           'Roboto', sans-serif;
@@ -37,39 +37,29 @@
 
 body{
     font-family: var(--ff-text);
-    margin-top: 15vh;
 }
 
 /* ------------------- nav bar ---------------- */
 
 .nav{
-    position: fixed;
-    z-index: var(--z-fixed);
-    top: 0vh;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: var(--space-s);
-    grid-auto-rows: minmax(280px, auto);
-    height: 15vh;
-    background-color: var(--main-color);
+    height: 120px;
+    width: 100%;
+    background-color: var(--bg-color);
+    border-bottom: 1px solid var(--light-color);
 }
-.logo-container,
-.logo-container a{
-    height: inherit;
-    width: 280px;
+
+.logo-container{
+    text-align: center;
 }
-.logo-container a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .logo-container img{
-    height: 55px;
+    height: 40px;
 }
 
 .menu-container{
-    height: inherit;
+    height: 40px;
     grid-column: 2 / 5;
+    grid-row: 4;
 }
 .list,
 .item-list,
@@ -83,37 +73,41 @@ body{
 }
 .item-list a{
     align-items: center;
-    color: var(--light-color-alt);
+    color: var(--main-color);
     font-weight: 700;
     position: relative;
 }
 .item-list:hover{
     transition: .2s;
-    background-color: var(--transparent-color);
     font-size: var(--fs-subtitle);
     padding: 0 5px; 
 }
-.user-container,
+.user-container{
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
+}
 .logo{
     height: inherit;
-}
-.logo{
     display: flex;
     align-items: center;
+    margin: 0 10px;
 }
 .logo img{
-    height: 55px;
+    height: 20px;
 }
 
 /* ------------------- header ---------------- */
 
 .header{
-    background-color: var(--second-color);
+    height: 400px;
+    padding: 25px 0;
+    margin: 0 10%;
+    overflow: hidden;
 }
-.important-container,
 .important-container img{
-    height: 70vh;
-    border-right: 10px solid var(--dark-color);
+    height: 350px;
+    object-fit: contain;
 }
 .important-container{
     display: flex;
@@ -158,7 +152,7 @@ body{
 /* ------------------- footer ---------------- */
 
 .footer{
-    height: 20vh;
+    height: 70px;
     background-color: var(--second-color-alt);
     position: relative;
 }
@@ -166,15 +160,16 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 15vh;
+    height: 50px;
 }
 .bottom-footer{
     background-color: var(--bg-color);
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 5vh;
+    height: 20px;
     position: absolute;
     bottom: 0;
 }
