--- a/css/style.css
+++ b/css/style.css
@@ -1,220 +1,212 @@
-:root{
-    --transparent-color:rgba(0, 0, 0, 50%);
-    --dark-color:       #422144;
-    --dark-color-alt:   #504c1a;
-    --main-color:       #62286b;
-    --second-color:     #cb3a8c;
-    --second-color-alt: #766e1a;
-    --light-color:      #dc9bbc;
-    --light-color-alt:  #ffed00;
-    --bg-color:         #fff;
-
-    --fs-title:          2rem;
-    --fs-subtitle:       1.5rem;
-    --fs-text:           1rem;
-
-    --ff-title:          'Euphoria Script', cursive;
-    --ff-text:           'Roboto', sans-serif;
-
-    --z-back    : -10;
-    --z-normal  : 1;
-    --z-tooltip : 10;
-    --z-fixed   : 100;
-    --z-modal   : 1000;
-
-    --space-s: 10px;
-    --space-m: 20px;
-    --space-l: 30px;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
 }
 
-*, *::before, *::after{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-}
-
-body{
-    font-family: var(--ff-text);
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 /* ------------------- nav bar ---------------- */
-
-.nav{
-    height: 120px;
-    width: 100%;
-    background-color: var(--bg-color);
-    border-bottom: 1px solid var(--light-color);
+.nav {
+  height: 120px;
+  width: 100%;
+  background-color: #fff;
+  border-bottom: 1px solid #dc9bbc;
 }
 
-.logo-container{
-    text-align: center;
+.logo-container {
+  text-align: center;
+}
+.logo-container img {
+  height: 40px;
 }
 
-.logo-container img{
-    height: 40px;
+.menu-container {
+  height: 40px;
 }
 
-.menu-container{
-    height: 40px;
-    grid-column: 2 / 5;
-    grid-row: 4;
-}
 .list,
 .item-list,
-.item-list a{
-    display: flex;
-    height: 100%;
+.item-list a {
+  display: flex;
+  height: 100%;
 }
-.list{
-    justify-content: space-evenly;
-    align-items: center;
+
+.list {
+  justify-content: space-evenly;
+  align-items: center;
 }
-.item-list a{
-    align-items: center;
-    color: var(--main-color);
-    font-weight: 700;
-    position: relative;
+
+.item-list a {
+  align-items: center;
+  color: #62286b;
+  font-weight: 700;
+  position: relative;
 }
-.item-list:hover{
-    transition: .2s;
-    font-size: var(--fs-subtitle);
-    padding: 0 5px; 
+
+.item-list:hover {
+  transition: 0.2s;
+  font-size: 1.5rem;
+  padding: 0 5px;
 }
-.user-container{
-    height: 30px;
-    display: flex;
-    justify-content: flex-end;
+
+.user-container {
+  height: 30px;
+  display: flex;
+  justify-content: flex-end;
 }
-.logo{
-    height: inherit;
-    display: flex;
-    align-items: center;
-    margin: 0 10px;
+
+.logo {
+  height: inherit;
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
 }
-.logo img{
-    height: 20px;
+.logo img {
+  height: 20px;
 }
 
 /* ------------------- header ---------------- */
-
-.header{
-    height: 400px;
-    padding: 25px 0;
-    margin: 0 10%;
-    overflow: hidden;
-}
-.important-container img{
-    height: 350px;
-    object-fit: contain;
-}
-.important-container{
-    display: flex;
-    flex-wrap: nowrap;
-    overflow: hidden;
-    animation: moving 6s infinite alternate ease-in;
-}
-@keyframes moving{
-    0%, 49%{ margin-left: 0; }
-    50%, 100%{ margin-left: -70%; }
+.header {
+  height: 400px;
+  padding: 25px 10%;
+  overflow: hidden;
+  border-bottom: 1px solid #dc9bbc;
 }
 
-    /* ------------------- main ---------------- */
+.important-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  animation: moving 10s infinite alternate ease-in;
+  transition: 3s;
+}
+.important-container img {
+  height: 350px;
+  object-fit: contain;
+}
 
-.main{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 50px 80px;
-    background-color: var(--bg-color);
+@keyframes moving {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: -70%;
+  }
 }
-.category-container{
-    height: 50vh;
-    width: 25vw;
-    margin-bottom: var(--space-m);
+/* ------------------- main ---------------- */
+.main {
+  padding: 50px 10%;
+  background-color: #fff;
 }
-.category-item{
-    height: inherit;
-    width: inherit;
-    overflow: hidden;
+.main__wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  border: 1px solid red;
 }
-.category-item:hover{
-    background-color: var(--transparent-color);
-    box-shadow: 0 0 10px var(--dark-color);
+
+.category-container {
+  height: 50vh;
+  width: 25vw;
 }
-.category-item img{
-    height: inherit;
-    width: inherit;
-    object-fit: cover;
+
+.category-item {
+  height: inherit;
+  width: inherit;
+  overflow: hidden;
+}
+.category-item:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px #422144;
+}
+.category-item img {
+  height: inherit;
+  width: inherit;
+  object-fit: cover;
 }
 
 /* ------------------- footer ---------------- */
+.footer {
+  height: 70px;
+  background-color: #766e1a;
+  position: relative;
+}
 
-.footer{
-    height: 70px;
-    background-color: var(--second-color-alt);
-    position: relative;
+.top-footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 50px;
 }
-.top-footer{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 50px;
+
+.bottom-footer {
+  background-color: #fff;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 20px;
+  position: absolute;
+  bottom: 0;
 }
-.bottom-footer{
-    background-color: var(--bg-color);
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 20px;
-    position: absolute;
-    bottom: 0;
+
+.designed {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: #422144;
 }
-.designed{
-    font-family: var(--ff-text);
-    font-size: var(--fs-text);
-    color: var(--dark-color);
-}
+
 .contact,
 .contact a,
 .social,
 .social a,
 .faq,
-.faq a{
-    font-family: var(--ff-title);
-    font-size: var(--fs-subtitle);
-    color: var(--light-color-alt);
+.faq a {
+  font-family: "Euphoria Script", cursive;
+  font-size: 1.5rem;
+  color: #ffed00;
 }
+
 .contact img,
-.social img{
-    height: 30px;
-    vertical-align: -10px;
-    margin-right: 10px;
+.social img {
+  height: 30px;
+  vertical-align: -10px;
+  margin-right: 10px;
 }
 
 /* ------------------- FAQs ---------------- */
-.main-faqs{
-    font-family: var(--ff-text);
+.main-faqs {
+  font-family: "Roboto", sans-serif;
 }
-.faqs-container{
-    padding: 50px 80px;
+
+.faqs-container {
+  padding: 50px 80px;
 }
-.faqs-container .faq{
-    margin-bottom: var(--space-l);
+.faqs-container .faq {
+  margin-bottom: 30px;
 }
-.question{
-    font-family: var(--ff-text);
-    font-size: var(--fs-subtitle);
-    line-height: var(--fs-title);
-    color: var(--dark-color);
+
+.question {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  color: #422144;
 }
-.answer{
-    font-family: var(--ff-text);
-    font-size: var(--fs-text);
-    line-height: var(--fs-subtitle);
-    letter-spacing: .5px;
-    color: var(--transparent-color);
+
+.answer {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.5px;
+  color: rgba(0, 0, 0, 0.5);
 }
+
+/*# sourceMappingURL=style.css.map */
